k8s/dept.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: about
spec:
  selector:
    matchLabels:
      app: about-dept
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: about-dept
    spec:
      containers:
      - name: static
        image: 861531569385.dkr.ecr.ap-northeast-1.amazonaws.com/second:number 
        ports:
        - containerPort: 80
