k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: about-svc
  namespace: about
spec:
  selector:
    app: about-dept
  ports:
  - port: 80
    targetPort: 80
